# permission-sdk

./: .flake8  .gitignore  LICENSE  README.md  SDK_DEVELOPMENT_PLAN.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  test_identifier_validation.py
examples/: async_usage.py  basic_usage.py  batch_operations.py  caching_example.py  error_handling.py  resource_limit_usage.py
permission_sdk/: __init__.py  async_client.py  async_transport.py  client.py  config.py  exceptions.py  transport.py  utils.py
permission_sdk/cache/: __init__.py  base.py  memory.py  noop.py  permission_cache.py  provider.py  redis.py
permission_sdk/models/: __init__.py  common.py  limits.py  permissions.py  scopes.py  subjects.py
tests/: conftest.py
tests/unit/: test_cache.py  test_config.py  test_exceptions.py  test_limit_models.py  test_models.py
